fix intro diagram width on mobile

--- a/src/css/home/_01-intro.css
+++ b/src/css/home/_01-intro.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    max-width: 1024px;
     margin: 0 auto;
     padding: 2.36em 0 0;
     background: url("../assets/images/bg-main.png") repeat;
@@ -20,7 +21,7 @@
 
     & author-icon {
       flex: 1;
-      width: unset;
+      width: 100%;
       height: unset;
     }
 
